--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -6,31 +6,31 @@
     <mat-card-content>
       <div class="productForm">
         <div>
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Product name</mat-label>
             <input matInput formControlName="name" type="text" />
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Actual Price</mat-label>
             <input matInput formControlName="actualPrice" type="number" />
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Selling Price</mat-label>
             <input matInput formControlName="sellingPrice" type="number" />
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Quantity</mat-label>
             <input matInput formControlName="quantity" type="number" />
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Type</mat-label>
             <mat-select formControlName="type">
               <mat-option *ngFor="let type of productTypes" [value]="type">{{
