--- a/src/app/features/order/paid/paid.component.html
+++ b/src/app/features/order/paid/paid.component.html
@@ -29,6 +29,16 @@
     <td mat-cell *matCellDef="let row"> {{row.date | date:'medium'}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="payment-status">
+    <th mat-header-cell *matHeaderCellDef scope="row"> Payment </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-slide-toggle (click)="changePaymentStatus(row.id)" [checked]="true">
+        Mark as Un-paid
+      </mat-slide-toggle>
+    </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
       <div class="example-element-detail"
