--- a/src/app/features/order/unpaid/unpaid.component.css
+++ b/src/app/features/order/unpaid/unpaid.component.css
@@ -41,3 +41,6 @@ tr.example-element-row:not(.example-expanded-row):active {
 tr.example-detail-row {
   height: 0;
 }
+tr.mat-footer-row {
+  font-weight: bold;
+}
