--- a/src/app/features/order/unpaid/unpaid.component.html
+++ b/src/app/features/order/unpaid/unpaid.component.html
@@ -6,27 +6,39 @@
 </div>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" multiTemplateDataRows>
 
-  <!-- ID Column -->
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header scope="rowgroup"> ID </th>
     <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+    <td mat-footer-cell *matFooterCellDef>Total Due</td>
+
   </ng-container>
 
-  <!-- Progress Column -->
   <ng-container matColumnDef="totalPrice">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Amount </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header scope="rowgroup"> Total Amount </th>
     <td mat-cell *matCellDef="let row"> {{row.totalPrice}} </td>
+    <td mat-footer-cell *matFooterCellDef>{{ calculateDue()}}</td>
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef > Name </th>
     <td mat-cell *matCellDef="let row"> {{row.customer.name}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
 
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef > Date </th>
     <td mat-cell *matCellDef="let row"> {{row.date | date:'medium'}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <ng-container matColumnDef="payment-status">
+    <th mat-header-cell *matHeaderCellDef scope="row"> Payment </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-slide-toggle (click)="changePaymentStatus(row.id)">
+       Mark as Paid
+      </mat-slide-toggle>
+    </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
 
   <ng-container matColumnDef="expandedDetail">
@@ -40,18 +52,24 @@
                     <td mat-cell *matCellDef="let element">
                       {{ element.key.name }}
                     </td>
+                    <td mat-footer-cell *matFooterCellDef>Total </td>
+
                   </ng-container>
                   <ng-container matColumnDef="sellingPrice">
                     <th mat-header-cell *matHeaderCellDef>Price</th>
                     <td mat-cell *matCellDef="let element">
                       {{ element.key.sellingPrice }}
                     </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+
                   </ng-container>
                   <ng-container matColumnDef="quantity">
                     <th mat-header-cell *matHeaderCellDef>Quantity</th>
                     <td mat-cell *matCellDef="let element">
                       {{ element.value }}
                     </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+
                   </ng-container>
                   <ng-container matColumnDef="amount">
                     <th mat-header-cell *matHeaderCellDef>
@@ -60,6 +78,7 @@
                     <td mat-cell *matCellDef="let element">
                       {{ element.key.sellingPrice * element.value }}
                     </td>
+                    <td mat-footer-cell *matFooterCellDef>{{calculateTotal()}}</td>
 
                   </ng-container>
                   <tr mat-header-row *matHeaderRowDef="['name', 'sellingPrice', 'quantity', 'amount']"></tr>
@@ -67,6 +86,7 @@
                     mat-row
                     *matRowDef="let row; columns: ['name', 'sellingPrice', 'quantity', 'amount']"
                   ></tr>
+                  <tr mat-footer-row class="sticky-footer" *matFooterRowDef="['name', 'sellingPrice', 'quantity', 'amount']"></tr>
             </mat-table>
             <!-- <table border="1">
               <tr>
@@ -92,7 +112,8 @@
       [class.example-expanded-row]="expandedRow === element"
       (click)="expandedRow = expandedRow === element ? null : element; getProductsOfOrder(element.id)">
   </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+  <tr mat-row class="sticky-footer" *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
   <!-- Row shown when there is no matching data. -->
   <tr class="mat-row" *matNoDataRow>
